# PieceTree

./: .gitignore  CMakeLists.txt
notes/: todo.txt
src/: PieceTree.cpp  PieceTree.h
tests/: GetLinePiecesTest.cpp  InsertionTest.cpp  RemovingTest.cpp  Util.cpp  Util.h
